Refactor entity base classes and system state haulmont/jmix-old#33